# ricer

./: .gitignore  README.md  RESEARCH_FINDINGS.md  analysis_competitive_landscape.md  generate_metadata.py  install_perspective_widget.py  kde_settings_metadata.json  mcp_kde_fixed.json  mcp_kde_logic.json  mcp_ricing_schema.json  move_panel.py  proposal.md
ricer-client/: README.md  example.env  llm_provider.py  main.py  mcp_client.py  orchestrator.py  pyproject.toml
ricer-client/tests/: __init__.py  conftest.py  test_mcp_client.py
ricer-mcp/: README.md  changeset.py  feature.py  mcp_provider.py  provider_runtime.py  pyproject.toml  server.py
ricer-mcp/.gemini/: settings.json
ricer-mcp/features/: __init__.py  cursor_size.py  double_click_interval.py  global_scaling.py  keyboard_accessibility.py  panel_position.py  single_click.py  touchpad_settings.py  wallpaper.py  window_borders.py
ricer-mcp/resources/: __init__.py
ricer-mcp/resources/display/: __init__.py  get_color_scheme.py  get_global_scaling.py  get_panel_position.py  get_wallpaper.py  get_window_borders.py
ricer-mcp/resources/input/: __init__.py  get_cursor_size.py  get_double_click_interval.py  get_keyboard_accessibility.py  get_single_click.py  get_touchpad_settings.py
ricer-mcp/tests/: __init__.py  conftest.py  test_features.py  test_server.py
ricer-mcp/tools/: __init__.py
ricer-mcp/tools/display/: __init__.py  change_wallpaper.py  move_panel.py  set_color_scheme.py  set_global_scaling.py  set_wallpaper.py  set_window_borders.py
ricer-mcp/tools/input/: __init__.py  set_cursor_size.py  (+4 more)
(+159 files in other folders)
